# docflow-web

./: .env.example  .gitmodules  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: analytics.py  auth.py  dictionaries.py  health.py  history.py  projects.py  tasks.py  webhook.py
backend/app/core/: __init__.py  config.py  encryption.py  logging.py  request_context.py
backend/app/db/: session.py
backend/app/models/: dictionary_entry.py  notification_channel.py  project.py  publication.py  task.py  user.py
backend/app/schemas/: __init__.py  analytics.py  dictionary.py  health.py  notification.py  project.py  publication.py  task.py  user.py
backend/app/services/: auth.py  bitrix_notify.py  dictionaries.py  dictionary_merger.py  github.py  history_analytics.py  pipeline_runner.py  task_list_events.py  tasks.py  webhook.py
backend/docflow_web_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/docs/: dev-plan.md  testing.md
backend/migrations/: env.py
backend/migrations/versions/: .gitkeep  7b9c2d1e4f6a_add_task_conflict_fields.py  a6d3f4b2c1e0_merge_task_heads.py  c8f8f53f3e2a_add_completed_at_to_tasks.py  d1a4f8b3e9c7_audit_security_columns.py  e4c2a1b8f901_add_stage6_task_fields.py
backend/tests/: conftest.py  test_analytics.py  test_auth.py  test_dictionaries.py  test_github_oauth.py  test_health.py  test_history.py  test_projects.py  test_publish.py  test_task_events.py  test_tasks.py  test_webhook.py
backend/tests/services/: test_auth_service.py  test_dictionary_merger.py  test_github_client.py  test_pipeline_runner.py  test_webhook_security.py
docs/: api.md  docker.md  logging.md
docs/designs/: dashboard_v4.html  taskdetail_v1.html
frontend/: README.md  package-lock.json  package.json  tsconfig.test.json  vite.config.ts
frontend/e2e/: task_publish_flow.spec.ts
frontend/src/: main.tsx
frontend/tests/: setup.ts
scripts/: test.ps1  test.sh
(+258 files in other folders)
